--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # 2. config.build.yml
 # 3. config.yml
 
-
+url : http://yukatan.github.io/commangular
 name: commangular-web
 description: 
 author:
