updated base url

--- a/_config.build.yml
+++ b/_config.build.yml
@@ -3,6 +3,9 @@
 # 2. config.build.yml
 # 3. config.yml
 
+url: http://yukatan.github.io/commangular
+baseurl: /commangular
 future: false
 show_drafts: false
+
 
