Fixed angular-mocks dependecy error

--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,10 @@
     "url": "git://github.com/yukatan/commangular.git"
   },
   "dependencies": {
-    "angular": "*",
+    "angular": "*"
+    
+  },
+  "devDependencies" {
     "angular-mocks": "*"
   },
   "ignore": [
