--- a/_config.build.yml
+++ b/_config.build.yml
@@ -3,8 +3,8 @@
 # 2. config.build.yml
 # 3. config.yml
 
-url: http://yukatan.github.io/commangular
-baseurl: /commangular
+url: http://www.commangular.org
+baseurl: 
 future: false
 show_drafts: false
 
