--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "grunt-bower": "*",
     "grunt-bower-task": "*",
     "grunt-karma": "latest",
+    "karma-jasmine": "latest",
+    "karma-chrome-launcher": "latest",
     "grunt-conventional-changelog": "0.0.12",
     "grunt-zip": "*"
   },
